--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Envelope + Letter (Open/Close on Click)</title>
+    <title>koziiiiii</title>
     <link rel="stylesheet" href="./style.css">
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            position: relative; /* Ensure hearts stay within the viewport */
+        }
+
+        .heart {
+            position: absolute;
+            top: -50px; /* Start above the visible area */
+            left: 50%; /* Start from the middle horizontally */
+            animation: fall 5s linear infinite; /* Change the duration and timing here */
+            color: pink; /* Heart color */
+            font-size: 24px; /* Adjust heart size */
+        }
+
+        @keyframes fall {
+            0% {
+                transform: translateY(-50px) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) translateX(calc(-50% + 20px)); /* Adjust if needed */
+                opacity: 0;
+            }
+        }
+
+        .pink-button {
+            background-color: pink;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -13,10 +50,11 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Person.</strong>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Numquam labore omnis minus maiores laboriosam, facere in beatae esse. 
+                        <strong class="strong">Dear Koseki.</strong>
+                        <p class="text">
+                             thank you for being such an amazing person i am blessed to have u in my life love u lots!</p>
+                            <p class="text2">
+                                -Yesui
                         </p>
                     </div>
                 </div>
@@ -24,11 +62,28 @@
             <div class="heart"></div>
         </div>
     </div>
+
+    <button class="pink-button" onclick="createHearts()">Click Me</button>
+
     <script>
         const envelope = document.querySelector('.envelope-wrapper');
         envelope.addEventListener('click', () => {
             envelope.classList.toggle('flap');
         });
+
+        function createHearts() {
+            const numHearts = 10; // Change this number to adjust the number of hearts
+            const heartContainer = document.body;
+
+            for (let i = 0; i < numHearts; i++) {
+                const heart = document.createElement('div');
+                heart.innerHTML = '&#10084;&#65039;'; // Pink heart emoji
+                heart.className = 'heart';
+                heart.style.left = Math.random() * window.innerWidth + 'px'; // Random horizontal position
+                heart.style.animationDuration = Math.random() * 3 + 2 + 's'; // Random duration between 2 and 5 seconds
+                heartContainer.appendChild(heart);
+            }
+        }
     </script>
 </body>
 </html>
